2024-10-08  Tao Liu  <vladimir.liu@gmail.com>
	MACS 3.0.3b

	* Features added

	1) We extensively rewrote the `pyx` codes into `py` codes. In
	another words, we now apply the 'pure python style' with PEP-484
	type annotations to our previous Cython style codes. So that, the
	source codes can be more compatible to Python programming tools
	such as `flake8`. During rewritting, we cleaned the source codes
	even more, and removed unnecessary dependencies during
	compilation.

	* Bug fixed

	1) Fix issues in big-endian system in `Parser.py` codes. Enable
	big-endian support in `BAM.py` codes for accessig certain
	alignment records that overlap with givin genomic
	coordinates using BAM/BAI files.

	* Doc

	1) Explanation on the filtering criteria on SAM/BAM/BAMPE files.

2024-09-06  Tao Liu  <vladimir.liu@gmail.com>
	MACS 3.0.2

	* Features added

	1) Introduce a new emission model for the `hmmratac` function. Now
	users can choose the simpler Poisson emission `--hmm-type poisson`
	instead of the default Gaussian emission. As a consequence, the
	saved HMM model file in json will include the hmm-type information
	as well. Note that in order to be compatible with the HMM model
	file from previous version, if there is no hmm-type information in
	the model file, the hmm-type will be assigned as gaussian. #635

	2) `hmmratac` now output narrowPeak format output. The summit
	position and the peak score columns reported in the narrowPeak
	output represents the position with highest foldchange value
	(pileup vs average background).

	3) Add `--cutoff-analysis-steps` and `--cutoff-analysis-max` for
	`callpeak`, `bdgpeakcall`, and `hmmratac` so that we can
	have finer resolution of the cutoff analysis report. #636  #642

	4) Reduce memory usage of `hmmratac` during decoding step, by
	writing decoding results to a temporary file on disk (file
	location depends on the environmental TEMP setting), then loading
	it back while identifying state pathes. This change will decrease