@@ -1,5 +1,5 @@
 [build-system]
-requires=['setuptools>=68.0', 'numpy>=1.25,<2.0.0', 'scipy>=1.12', 'cykhash>=2.0,<3.0', 'Cython>=3.0,<3.1', 'scikit-learn>=1.3', 'hmmlearn>=0.3.2']
+requires=['setuptools>=68.0', 'numpy>=1.25,<2', 'scipy>=1.12', 'cykhash>=2.0', 'Cython>=3.0', 'scikit-learn>=1.3', 'hmmlearn>=0.3.2']
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -24,11 +24,11 @@ classifiers =['Development Status :: 5 - Production/Stable',
               'Programming Language :: Python :: 3.11',
               'Programming Language :: Python :: 3.12',
               'Programming Language :: Cython']
-dependencies = ["numpy>=1.25,<2.0.0",
+dependencies = ["numpy>=1.25,<2",
 	        "scipy>=1.12",
              	"hmmlearn>=0.3.2",
                 "scikit-learn>=1.3",
-                "cykhash>=2.0,<3.0"]
+                "cykhash>=2.0"]
 
 [project.urls]
 Homepage = "https://https://macs3-project.github.io/MACS/"
